# zet

./: .envrc.example  .gitignore  Cargo.toml  README.md
.github/workflows/: check.yml  coverage.yml  test.yml
src/: create.rs  lib.rs  main.rs  search.rs
