[package]
name = "zet"
version = "0.1.0"
edition = "2021"
authors = ["Peter A. Ramaldes <peter.ramaldes@gmail.com>"]
license = "GPL-3.0"
description = "Zettlekasten Command Line written in Rust" 
repository = "https://github.com/peterramaldes/zet.git"

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive"] }
